--- a/checkout-confirm.html
+++ b/checkout-confirm.html
@@ -298,7 +298,7 @@
                                 </svg>
                             </div>
                             <h1>Thành công</h1>
-                            <p style="margin-top:3rem;">Đặt bàn của bạn đã hoàn tất, cảm ơn bạn đã tin tưởng sử dụng
+                            <p style="margin-top:3rem;">Đặt phòng của bạn đã hoàn tất, cảm ơn bạn đã tin tưởng sử dụng
                                 dịch vụ
                                 tại khách sạn chúng tôi!
                             </p>
